--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -5,10 +5,16 @@
   padding-left: 30px;
   padding-bottom: 80px;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  // align-items: center;
   max-width: 1024px;
   margin: 0 auto;
+  * {
+    color: #fff;
+  }
+  h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
 }
 
 .grid-list {
@@ -60,4 +66,72 @@
   justify-content: space-between;
   font-size: 12px;
   padding: 20px 0;
+  a {
+    color: #9e9e9e;
+  }
+}
+
+// BLOG TYPOGRAPHY
+
+.blog-content {
+  display: flex;
+  gap: 2px;
+  flex-direction: column;
+  line-height: 1.8;
+  color: #f1f1f1 !important;
+}
+
+.blog-title {
+  display: flex;
+  align-items: center;
+  h1 {
+    font-family: "Poppins";
+    color: white;
+    font-size: 3rem;
+    text-align: start;
+  }
+}
+
+.blog-hero-image {
+  display: flex;
+  flex: 1;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.date {
+  padding: 1rem 0;
+}
+
+@media screen and (max-width: 900px) {
+  .grid-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 1rem;
+    h1 {
+      font-size: 2rem;
+    }
+  }
+
+  .grid-list {
+    grid-template-columns: 1fr;
+  }
+
+  .post-text {
+    h5 {
+      font-size: 1.1rem;
+    }
+  }
+  .blog-title {
+    h1 {
+      font-size: 2rem;
+    }
+  }
 }
