--- a/styles/globals.css
+++ b/styles/globals.css
@@ -556,7 +556,7 @@ p.leader_leaderpara__2uIkn a {
 }
 
 .hullheight {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
 }
@@ -1416,4 +1416,34 @@ section.mydiv00133 p {
 }
 .contactPara1 {
   padding: 23px 0px;
+}
+
+/* FOR BLOG  */
+.view-more-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.view-more-button a {
+  position: relative;
+  background: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: sans-serif !important;
+  letter-spacing: 0.1em;
+  font-weight: 400;
+  padding: 12px 30px;
+  transition: 0.5s;
+  color: #242424;
+  border-radius: 4px;
+}
+.view-more-button a:hover {
+  background: #a2342d;
+  letter-spacing: 0.25em;
+  margin-left: -10px;
+  box-shadow: 0 0 35px #a2342d;
+  color: #fff;
 }
