--- a/css/style.css
+++ b/css/style.css
@@ -18713,6 +18713,7 @@ ul.primary li:before {
 @media only screen and (max-width: 991px) {
   .content-inner-2 {
     padding-top: 70px;
+    min-height: auto;
   }
 }
 
