--- a/styles/globals.css
+++ b/styles/globals.css
@@ -359,7 +359,7 @@
   }
 
   .unquie-section {
-    height: auto !important;
+    min-height: auto !important;
   }
 
   .testimonials-carousel1 .slider img {
@@ -559,6 +559,12 @@ p.leader_leaderpara__2uIkn a {
   min-height: 100vh;
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .fullheight {
+    min-height: unset;
+  }
 }
 
 .justify-center {
@@ -1295,7 +1301,7 @@ section.mydiv00133 p {
   }
 
   .slick-slide > div {
-    padding: 0 34px;
+    /* padding: 0 34px; */
   }
 }
 
@@ -1446,4 +1452,17 @@ section.mydiv00133 p {
   margin-left: -10px;
   box-shadow: 0 0 35px #a2342d;
   color: #fff;
+}
+
+/* FOR SLIDER */
+
+.slider-card {
+}
+.slider-card img {
+  max-width: 100%;
+  width: 100%;
+}
+
+.responsive-container {
+  max-width: 100vw;
 }
