--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1273,7 +1273,7 @@ section.mydiv00133 h1 {
   color: #fff;
   font-size: 35px;
   font-family: sans-serif;
-  width: 446px;
+  /* width: 446px; */
 }
 
 section.mydiv00133 p {
@@ -1407,9 +1407,8 @@ section.mydiv00133 p {
   }
 
   .mydiv00133 {
-    
     padding: 21px 0;
-}
+  }
 }
 
 .container9 {
@@ -1470,4 +1469,17 @@ section.mydiv00133 p {
 
 .responsive-container {
   max-width: 100vw;
+}
+
+@media screen and (max-width: 768px) {
+  .formBox3 {
+    width: 100%;
+  }
+  .mydiv00133 h1 {
+    margin: 0 !important;
+    color: #fff;
+    font-size: 35px;
+    font-family: sans-serif;
+    width: inherit !important;
+  }
 }
