--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -30,7 +30,7 @@
 .grid-item {
   width: 100%;
   color: #555;
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
 }
@@ -56,6 +56,7 @@
   align-items: flex-start;
   h5 {
     padding: 0 !important;
+    // width: 400px;
   }
 }
 
